src/main/kotlin/com/team1/mvp_test/common/error/CategoryErrorMessage.kt
package com.team1.mvp_test.common.error

enum class CategoryErrorMessage(val message: String) {
    DOSE_NOT_EXIST("존재하지 않는 카테고리입니다.")
}